fix: angular editor content spacings and layout

--- a/packages/default/scss/editor/_layout.scss
+++ b/packages/default/scss/editor/_layout.scss
@@ -19,6 +19,19 @@
         }
     }
 
+    kendo-editor {
+        &.k-editor {
+            flex-direction: column;
+            display: flex;
+        }
+        .k-content {
+            overflow-y: auto;
+            > .ProseMirror {
+                padding: $padding-x;
+            }
+        }
+    }
+
     // Reset styles if in sandbox mode
     .k-editor-sandbox {
 
